Aufgabe2/compiling_error.txt
C:\Users\fcyri\sciebo\PI\CodeBlocks\Aufgabe2\main.c:20:16: error: 'schranke' undeclared here (not in a function)
 int primzahlen[schranke];
                ^~~~~~~~
C:\Users\fcyri\sciebo\PI\CodeBlocks\Aufgabe2\main.c: In function 'primzahlen':
C:\Users\fcyri\sciebo\PI\CodeBlocks\Aufgabe2\main.c:250:17: error: subscripted value is neither array nor pointer nor vector
       primzahlen[array_count] = j;
                 ^
C:\Users\fcyri\sciebo\PI\CodeBlocks\Aufgabe2\main.c:263:49: error: subscripted value is neither array nor pointer nor vector
     printf("%ld ist eine Primzahl\n", primzahlen[x]);
                                                 ^
